# docs/swagger.json
@@ -60,8 +60,8 @@
                 "summary": "User login",
                 "parameters": [
                     {
-                        "description": "userRequest value (model.PersonRequest)",
-                        "name": "userRequest",
+                        "description": "user value (model.UserRequest)",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -85,6 +85,11 @@
         },
         "/persons": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get all persons",
                 "consumes": [
                     "application/json"
@@ -96,15 +101,6 @@
                     "Person"
                 ],
                 "summary": "Get all persons",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer token for authentication",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -122,6 +118,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Creates a new person",
                 "consumes": [
                     "application/json"
@@ -135,19 +136,12 @@
                 "summary": "Create a new person",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Bearer token for authentication",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "personRequest value (model.PersonRequest)",
-                        "name": "personRequest",
+                        "description": "person value (model.Person)",
+                        "name": "person",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.PersonRequest"
+                            "$ref": "#/definitions/model.Person"
                         }
                     }
                 ],
@@ -167,6 +161,11 @@
         },
         "/persons/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get a person by ID",
                 "consumes": [
                     "application/json"
@@ -179,13 +178,6 @@
                 ],
                 "summary": "Get a person by ID",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer token for authentication",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "Person ID",
@@ -208,6 +200,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Update a person by ID",
                 "consumes": [
                     "application/json"
@@ -222,25 +219,18 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer token for authentication",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
                         "description": "Person ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "personRequest value (model.PersonRequest)",
-                        "name": "personRequest",
+                        "description": "person value (model.Person)",
+                        "name": "person",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.PersonRequest"
+                            "$ref": "#/definitions/model.Person"
                         }
                     }
                 ],
@@ -258,6 +248,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Delete a person by ID",
                 "consumes": [
                     "application/json"
@@ -270,13 +265,6 @@
                 ],
                 "summary": "Delete a person by ID",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer token for authentication",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "Person ID",
@@ -352,8 +340,8 @@
                 "summary": "Sign up a new user",
                 "parameters": [
                     {
-                        "description": "userRequest value (model.PersonRequest)",
-                        "name": "userRequest",
+                        "description": "user value (model.UserRequest)",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -420,31 +408,6 @@
                 "salary"
             ],
             "properties": {
-                "ID": {
-                    "type": "string"
-                },
-                "married": {
-                    "type": "boolean"
-                },
-                "profession": {
-                    "type": "string",
-                    "maxLength": 30,
-                    "minLength": 3
-                },
-                "salary": {
-                    "type": "integer",
-                    "maximum": 100000,
-                    "minimum": 100
-                }
-            }
-        },
-        "model.PersonRequest": {
-            "type": "object",
-            "required": [
-                "profession",
-                "salary"
-            ],
-            "properties": {
                 "married": {
                     "type": "boolean"
                 },
@@ -500,6 +463,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
